--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
 
 <footer class="footer container-fluid">
   <div class="row mx-auto justify-content-center align-items-center">
-    <div class=" text-center col-md-12">
+    <div class=" text-center col-12">
       <a class="footer-contact" href="{% url 'contact' %}">Contact</a>
       <p class="footer-p">&copy; /*axdesigns*/ 2025</p>
     </div>
