--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 
 body {
     background-color: black;
-    color: white;
+    color: #F5F5F5;
     font-size: 12px;
     max-width: 1400px;
     font-family: 'Comic Neue', sans-serif;
@@ -26,7 +26,7 @@ h5 {
 }
 /* Navigation bar */
 .navbar-brand {
-    color: #B9D2C9;
+    color: #F5F5F5;
 }
 .navbar-brand:hover {
     color: #ff0000;
@@ -45,7 +45,7 @@ h5 {
     color: #ff0000;
 }
 .nav-item a {
-    color: #B9D2C9;
+    color: #F5F5F5;
     text-decoration: none;
     font-size: 1.2rem;
 }
@@ -53,12 +53,12 @@ h5 {
     color: #ff0000;
 }
 .nav-search {
-    color: #B9D2C9;
+    color: #F5F5F5;
     border-color: red;
     font-size: 1.2rem;
 }
 .nav-btn{
-    color: #B9D2C9;
+    color: #F5F5F5;
     border-color: red;
     background-color: black;
     font-size: 1.2rem;
@@ -77,7 +77,7 @@ h5 {
 
 }
 .nav-search select {
-    color: #B9D2C9;
+    color: #F5F5F5;
     border-color: red;
     background-color: black;
     font-size: 1.2rem;
@@ -92,7 +92,7 @@ h5 {
     color: #ff0000;
 }
 .nav-search input {
-    color: #B9D2C9;
+    color: #F5F5F5;
     border-color: red;
     background-color: black;
     font-size: 1.2rem;
@@ -103,7 +103,7 @@ h5 {
     outline: none;
     box-shadow: none;
     background-color: black;
-    color: #B9D2C9;
+    color: #F5F5F5;
 }
 form.d-flex select {
   width: 120px;
@@ -142,12 +142,12 @@ form.d-flex input[type="text"] {
 .page-item {
     font-size: 1.2rem;
     max-width: 700px;
-    color: #B9D2C9;
+    color: #F5F5F5;
 }
 /* Help text */
 .helptext {
     /*font-size: 1.2em;*/
-    color: #B9D2C9;
+    color: #F5F5F5;
     /*margin-top: 0.25rem;
     margin-bottom: 0.5rem;*/
 }
@@ -158,7 +158,7 @@ form.d-flex input[type="text"] {
 .helptext li*/{
     list-style: none;
     /*font-size: 1rem;*/
-    color: #B9D2C9;
+    color: #F5F5F5;
     margin-top: 0.25rem;
     margin-bottom: 0.75rem;
 }
@@ -167,7 +167,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
   background-color: black !important;
-  color: #B9D2C9 !important;
+  color: #F5F5F5 !important;
   -webkit-box-shadow: 0 0 0px 1000px black inset !important;
   border: 1px solid red !important;
 }
@@ -185,7 +185,7 @@ input:-webkit-autofill:focus {
 .page-item textarea {
   width: 100%;
   background-color: black !important;
-  color: #B9D2C9;
+  color: #F5F5F5;
   border: 1px solid red;
   font-size: 1.1rem;
   border-radius: 4px;
@@ -200,7 +200,7 @@ input:-webkit-autofill:focus {
 }
 /* Create account / Login button */
 .page-btn{
-    color: #B9D2C9;
+    color: #F5F5F5;
     border-color: red;
     background-color: black;
     font-size: 1.2rem;
@@ -213,7 +213,7 @@ input:-webkit-autofill:focus {
     border-color: red;
 }
 .logout {
-    color: #B9D2C9;
+    color: #F5F5F5;
     font-size: 1.2rem;
 }
 
@@ -230,13 +230,13 @@ input:-webkit-autofill:focus {
 .search-item ul,
 .search-item ul li {
     list-style: none;
-    color: #B9D2C9;
+    color: #F5F5F5;
     margin-top: 0.25rem;
     margin-bottom: 0.75rem;
     padding: 0;
 }
 .search-item a {
-    color: #B9D2C9;
+    color: #F5F5F5;
     font-size: 1.2rem;
 }
 .review-photo {
@@ -255,7 +255,7 @@ input:-webkit-autofill:focus {
     height: 60px;
 }
 .footer-contact {
-    color: #B9D2C9;
+    color: #F5F5F5;
     text-decoration: none;
     font-size: 1.5rem;
 }
