--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!--Meta tags for search engines-->
-      <meta name="description" content="Battle of the Emerging Rock Bands in 2025">
-      <meta name="Keywords" content="Battle of the bands, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
-      <meta name="author" content="axdesigns">
+    <meta name="description" content="Praise the Loud is a platform dedicated to promoting emerging rock and metal bands through gig reviews, band profiles, and community engagement.">
+    <meta name="Keywords" content="Gig reviews, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
+    <meta name="author" content="axdesigns">
+  
   <title>Praise The Loud</title>
+
+  <!--Cloudinary CDN-->
   <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+  
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+  
+  <!--Static css-->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
@@ -116,7 +124,7 @@
 <script src="{% static 'js/script.js' %}"></script>
 
 <!-- Bootstrap Bundle with Popper (required for navbar toggle) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoN6LR0E3oCwFZME1ZC2ZKp3E9z1FMvx6FUj5KkNnN0zj+N" crossorigin="anonymous"></script>
 
 </body>
 </html>
