--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load cloudinary %}
+
 
 {% block content %}
 <div class="container-fluid hero-image">
@@ -7,7 +9,7 @@
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/ptl-hero-image_eccbob.png" class="img-fluid" alt="Praise The Loud hero imagae">
             <h1>Hear them Loud Praise them Louder</h1>
             <p>Show your love for the artists by writing a review of their gigs</p>
-            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="img-fluid" alt="red rock horns" class="horns mt-0">
+            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="img-fluid horns mt-0" alt="red rock horns">
         </div>
     </div>
 </div>
