--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cloudinary %}
+
 
 {% block title %}Profile{% endblock %}
 {% block content %}
