--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
   <!--Cloudinary CDN-->
   <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png">
   
-  <!--Bootstrap CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
   <!--Static css-->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -85,28 +85,7 @@
   </div>
 </nav>
 
-    
-<!--<nav>
-  <a href="{% url 'home' %}">Home</a>
-  <a href="{% url 'about' %}">About</a> |
-  {% if user.is_authenticated %}
-    Hello {{ user.username }} |
-    <a href="{% url 'profile' %}">Profile</a> |
-    <a href="{% url 'review' %}">New Gig Review</a> |
-    <a href="{% url 'logout' %}">Logout</a> 
-  {% else %}
-    <a href="{% url 'login' %}">Login</a> |
-    <a href="{% url 'signup' %}">Sign Up</a>
-  {% endif %}
-  <form method="get" action="{% url 'search_view' %}">
-    {{ form.search_type }}
-    {{ form.search_term }}
-    <button type="submit">Search</button>
-  </form>
-
-</nav>-->
-
-
+<!-- Main content area -->
   <div class="content" >
     {% block content %}{% endblock %}
   </div>
@@ -124,7 +103,7 @@
 <script src="{% static 'js/script.js' %}"></script>
 
 <!-- Bootstrap Bundle with Popper (required for navbar toggle) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoN6LR0E3oCwFZME1ZC2ZKp3E9z1FMvx6FUj5KkNnN0zj+N" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body>
 </html>
