Create new gallery html fine Create new function for gallery_view Create URL path Add gallery link to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'gallery' %}">Wall of Chaos</a>
+        </li>
+
 
         <!-- Only show if logged in -->
         {% if user.is_authenticated %}
