Remove draft and publish status from models Commented out unused try and except function from search_view view Add styling to profile picture Add styling to search result cards and images Remove unused photos Clean up css for search results Add media queries for photo responsiveness and sizing

--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -25,7 +25,7 @@
 <!-- Show profile details when NOT editing -->
 {% elif profile_exists %}
     {% if profile.profile_photo %}
-      <p><img src="{{ profile.profile_photo.url }}" class="img-fluid" alt="Profile Photo" width="200"></p>
+      <p><img src="{{ profile.profile_photo.url }}" class="img-fluid" alt="Profile Photo" style="width: 300px; height: 300px; object-fit: contain; border-radius: 50%;"></p>
     {% else %}
       <p>No profile photo uploaded.</p>
     {% endif %}
