--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -16,7 +16,7 @@
               <div class="result-card">
                 <li>
                   {% if item.logo %}
-                    <img src="{{ item.logo.url }}" class="img-fluid mb-3" alt="{{ item.name }} logo">
+                    <img src="{{ item.logo.url }}" class="img-fluid result-card-logo" alt="{{ item.name }} logo">
                   {% else %}
                     <h3>{{ item.name }}</h3>
                   {% endif %}
@@ -24,7 +24,7 @@
                   {% if item.website %}
                     <p><a href="{{ item.website }}" target="_blank">Visit Website</a></p>
                   {% else %}
-                    <p>No website available</p>
+                    <p style="color: #F50000">No website available</p>
                   {% endif %}
 
                   {% if item.bio %}
@@ -41,7 +41,7 @@
                       {% for review in item.reviews %}
                         <li>
                           {% if review.photo %}
-                            <img src="{{ review.photo.url }}" class="img-fluid rounded mb-3" alt="Gig photo">
+                            <img src="{{ review.photo.url }}" class="img-fluid result-card-gig-photo" alt="Gig photo">
                             {% endif %}
                           <h5>{{ review.title }}</h5>
                           <p>{{ review.gig_date|date:"d-m-Y" }}</p>
@@ -52,7 +52,6 @@
                   {% else %}
                     <p><em>No reviews yet.</em></p>
                   {% endif %}
-                  <hr>                
                 </li>
               </div>
             {% endfor %}
