--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,6 +251,41 @@ input:-webkit-autofill:focus {
     object-fit: contain;
 }
 
+/* Wall of Chaos */
+.chaos-card {
+    background-color: black !important;
+    color: #F5F5F5;
+    font-size: 1.2rem;
+    border: 1px solid #F50000;
+    border-radius: 10px;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+}
+.card-img-top {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    align-self: center;
+}
+.tilt {
+    transform: rotate(-1.5deg);
+    transition: transform 0.3s ease;
+}
+.tilt:nth-child(2n) {
+    transform: rotate(1.5deg);
+}
+.tilt:hover {
+    transform: rotate(0deg) scale(1.02);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+.horns {
+    height: 200px;
+    width: 200px;
+    object-fit: contain;
+    align-self: center;
+}
+
 /**Footer */
 .footer {
     position: fixed;
