--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         <!-- Only show if logged in -->
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+            <a class="nav-link" href="{% url 'author_profile' %}">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'review' %}">New Gig Review</a>
