--- a/gig_reviews/templates/gig_reviews/author_profile.html
+++ b/gig_reviews/templates/gig_reviews/author_profile.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="container py-4">
   <h1>{{ author.username }}'s Public Profile</h1>
-    {% if author.profile_picture %}
-      <img src="{{ author.profile_picture.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
+    {% if profile and profile.image %}
+      <img src="{{ profile.image.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
     {% else %}
       <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
     {% endif %}
