--- a/gig_reviews/templates/gig_reviews/author_profile.html
+++ b/gig_reviews/templates/gig_reviews/author_profile.html
@@ -4,21 +4,23 @@
 
 {% block content %}
 <div class="container py-4">
-  <h1>{{ author.username }}'s Public Profile</h1>
-    {% if profile and profile.image %}
-      <img src="{{ profile.image.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
-    {% else %}
-      <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
-    {% endif %}
-    <h3>Reviews:</h3>
-    <ul>
-    {% for review in reviews %}
-      <li>
-        <strong>{{ review.title }}</strong> — {{ review.artist.name }} ({{ review.gig_date|date:"d/m/Y" }})
-      </li>
-    {% empty %}
-      <li>This fan hasn't written any reviews yet.</li>
-    {% endfor %}
-  </ul>
+    <h1>{{ author.username }}'s Public Profile</h1>
+        {% if profile and profile.profile_photo %}
+                <img src="{{ profile.profile_photo.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
+            {% else %}
+        <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+            {% endif %}
+
+        <h3>Reviews:</h3>
+        <ul>
+        {% for review in reviews %}
+        <li>
+            <strong>{{ review.title }}</strong> — {{ review.artist.name }} ({{ review.gig_date|date:"d/m/Y" }})
+        </li>
+        {% empty %}
+        <li>This fan hasn't written any reviews yet.</li>
+        {% endfor %}
+    </ul>
 </div>
+
 {% endblock %}
