--- a/gig_reviews/templates/gig_reviews/author_profile.html
+++ b/gig_reviews/templates/gig_reviews/author_profile.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}{{ author.username }}'s Profile{% endblock %}
 
 {% block content %}
 <div class="container py-4">
     <h1>{{ author.username }}'s Public Profile</h1>
-        {% if profile and profile.profile_photo %}
-                <img src="{{ profile.profile_photo.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
+        {% if profile and profile.image.url %}
+                <img src="{{ profile.image.url }}" alt="{{ author.username }}'s profile picture" class="img-fluid mb-3">
             {% else %}
         <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
             {% endif %}
